removed counter related code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,7 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <h2>Counter value from Store : </h2>
-  <p>{{count$ | async}}</p>
-  <p>todos "divers" : <span>{{(todos1$ | async)?.length}}</span></p>
-  <p>todos "angular" : <span>{{(todos2$ | async)?.length}}</span></p>
+  <p>todos "Westerns" : <span>{{(todos1$ | async)?.length}}</span></p>
 </div>
 <h2>Here is the Todo list : </h2>
 <ul>
